# Synapse

./: .env.example  .gitignore  Makefile  README.md  create_demo.py  generate_gif.py  pyproject.toml
.claude/: settings.local.json
cli/: __init__.py  main.py
scripts/: generate_demo_gif.py  make_demo_gif.py
synapse/: __init__.py  config.py  event_bus.py  main.py
synapse/agents/: __init__.py  base.py  dev_agent.py  life_agent.py  ops_agent.py  proactive_agent.py  security_agent.py
synapse/collectors/: base.py  calendar_collector.py  dependency_collector.py  rss_collector.py
synapse/hud/: __init__.py  app.py  overlay.py  theme.py
synapse/hud/widgets/: __init__.py  notification.py  status_bar.py
synapse/llm/: __init__.py  ollama_client.py
synapse/memory/: __init__.py  chroma_store.py  memory_manager.py  models.py  sqlite_store.py
synapse/orchestrator/: __init__.py  graph.py  state.py
synapse/perception/: __init__.py  base.py  file_watcher.py  screen_capture.py  vscode_context.py
synapse/rules/: engine.py  rules.py  state_store.py
tests/: conftest.py  test_event_bus.py  test_memory.py  test_rule_engine.py  test_security_agent.py
